# Paradox-Dots-and-Boxes-Solver

./: .gitignore  .gitmodules  CMakeLists.txt  Paradox_Dots_And_Boxes.sln  Paradox_Dots_and_Boxes.sln
Paradox_Dots_And_Boxes/: GameDefine.cpp  GameDefine.h  GameShell.cpp  GameShell.h  GeneralGameShell.cpp  GeneralGameShell.h  MCTS.cpp  MCTS.h  MoveAnalysist.cpp  MoveAnalysist.h  MoveAnalyst.cpp  MoveAnalyst.h  Paradox-Dots-and-Boxes-Solver.vcxproj  Paradox-Dots-and-Boxes-Solver.vcxproj.filters  Paradox_Dots_And_Boxes.cpp  Paradox_Dots_and_Boxes.vcxproj  Paradox_Dots_and_Boxes.vcxproj.filters  PersonalDef.cpp  PersonalDef.h  Resource.rc  Shell.cpp  Shell.h  Solver.cpp  Solver.h  StateAnalyst.cpp  StateAnalyst.h  StorageCache.cpp  StorageCache.h  stdafx.cpp
Paradox_Dots_And_Boxes/include/: gadtlib.cpp  gadtlib.h
src/: ActionGenerator.hpp  BasicDefine.cpp  BasicDefine.h  BoardDefine.hpp  ChainAnalyst.hpp  DbController.hpp  DbInfo.cpp  DbInfo.h  GameDefine.cpp  GameDefine.h  GameMain.cpp  GameStreamDefine.h  LayerConatiner.cpp  LayerConatiner.hpp  Mcts.hpp  Minimax.hpp  Paradox_Dots_And_Boxes.cpp  RetrospectMapper.cpp  RetrospectMapper.h  RetrospectMethod.hpp  RetrospectProcess.cpp  RetrospectProcess.h  RetrospectReducer.cpp  RetrospectReducer.h  Solver.cpp  Solver.h  StateAnalyst.cpp  StateAnalyst.h  StateDefine.hpp  StateRepresentation.hpp  StorageCache.cpp
